--- a/Hello World/index.html
+++ b/Hello World/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en-US">
+<body style="text-align:center;">
 
 <h1>Hello World!</h1>
-<p>Hello smaller world.</p>
 
 </body>
 </html>
