--- a/Hello World/index.html
+++ b/Hello World/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="keyword" content="HTML, CSS, Coding, Beginer">
+        <title>Project 1: Hello World</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
 <body style="text-align:center;">
 
 <h1>Hello World!</h1>
