--- a/Hello World/index.html
+++ b/Hello World/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<body style="text-align:center;">
+    <head>
+        <title>My First web page!</title> 
 
-<h1>Hello World!</h1>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="keyword" content="HTML, CSS, Coding, Beginer">
+        <meta name="author" content="Karim the dream">
+        <meta name="description" content="My first project!">
+        
+        <link rel="normalize" href="normalize.css">
+        <link rel="stylesheet" href="index.css">
+        <style>
+           body {Background-color: rgb(0, 174, 255)}
+           h1 {color:rgb(128, 97, 238)}  
+        </style>
+    </head>
+<body>
+<div class="container">
+    <div class="item 1">
+        <h1>Hello world!</h1>
+    </div>
+</div>
 
 </body>
 </html>
