final calculator non functional

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -21,9 +21,10 @@
             <div class="calculator">
                 <section class="screen"> output</section>
 
+            
                 <section class="calc-buttons">
                     <div class="calc-button-row">
-                        <button class="calc-button">C</button>
+                        <button class="calc-button-c">C</button>
                         <button class="calc-button">&larr;</button>
                         <button class="calc-button">&divide;</button>
                     </div>
@@ -50,7 +51,7 @@
                     </div>
 
                     <div class="calc-button-row">
-                        <button class="calc-button">0</button>
+                        <button class="calc-button-0">0</button>
                         <button class="calc-button">.</button>
                         <button class="calc-button">&equals;</button>
                     </div>
